2015-08-17 Ben Shi <powerstudio1st AT 163 DOT com>
	* configure.ac:
	* configure:
	  Extend stack size on cygwin64.

2015-08-15 Ben Shi <powerstudio1st AT 163 DOT com>
        * src/SDCCast.c:
          Fix a bug in storage class check.
        * support/regression/tests/gcc-torture-execute-20020402-3.c:
          Enable test case.

2015-08-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c,
	  support/regression/tests/array.c:
	  Implement RFE #454 for index[array] access.
	* src/SDCC.y,
	  src/SDCCerr.h,
	  src/SDCCerr.c:
	  Emit warning for non-standard label without statement.
	* support/regression/tests/generic.c:
	  Disable test for host, since older host compilers are still in use.

2015-08-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCast.c,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  support/regression/tests/generic.c,
	  doc/sdccman.lyx:
	  Implement C11 generic selections.

2015-08-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  support/regression/tests/gcc-torture-execute-920721-3.c,
	  support/regression/tests/gcc-torture-execute-pr34176.c,
	  support/regression/tests/implicit_int.c:
	  Diagnostic for implicit int.

2015-08-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Fix bug #2408.
	* src/z80/peeph-r2k.def,
	* src/z80/peeph-tlcs90.def:
	  Synced with z80 peepholes.

2015-08-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Fix bug #2407 using fix suggested by alvin.

2015-08-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Cheaper stm8 division workaround (RFE #449).
	* doc/sdccman.lyx:
	  Update standard compliance documentation to reflect recently implemented feature.

2015-08-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/SDCCralloc.hpp,
	  src/stm8/gen.c:
	  Static code analysis to omit stm8 division workaround when safe to do so (RFE #448).
