@@ -527,10 +527,9 @@ AC_DEFINE_UNQUOTED(TYPE_UWORD,  unsigned $TYPE_WORD,  [XXX])
 AC_DEFINE_UNQUOTED(TYPE_UDWORD, unsigned $TYPE_DWORD, [XXX])
 AC_DEFINE_UNQUOTED(TYPE_UQWORD, unsigned $TYPE_QWORD, [XXX])
 
-if test "x${ac_cv_sizeof_long}" = "x8"; then
-#ifdef __CYGWIN__
+if [[[ $host =~ "x86_64" ]]] && [[[ $host =~ "cygwin" ]]]
+then
   LDFLAGS="$LDFLAGS -Wl,--stack,4194304"
-#endif
 fi
 
 # Checking whether byte ordering is bigendian
